admin can get jobApp's information from jobPost